upgrade to latest Rhino version from HEAD
git-svn-id: svn://svn.code.sf.net/p/htmlunit/code/trunk@4666 5f5364db-9458-4db8-a492-e30667be6df6