@@ -56,6 +56,8 @@ import java.util.Set;
 import java.util.HashSet;
 import java.util.Locale;
 
+import org.mozilla.javascript.ast.AstRoot;
+import org.mozilla.javascript.ast.ScriptNode;
 import org.mozilla.javascript.debug.DebuggableScript;
 import org.mozilla.javascript.debug.Debugger;
 import org.mozilla.javascript.xml.XMLLib;
@@ -142,6 +144,11 @@ public class Context
     public static final int VERSION_1_7 =      170;
 
     /**
+     * JavaScript 1.8
+     */
+    public static final int VERSION_1_8 =      180;
+
+    /**
      * Controls behaviour of <tt>Date.prototype.getYear()</tt>.
      * If <tt>hasFeature(FEATURE_NON_ECMA_GET_YEAR)</tt> returns true,
      * Date.prototype.getYear subtructs 1900 only if 1900 <= date < 2000.
@@ -204,12 +211,12 @@ public class Context
      */
     public static final int FEATURE_PARENT_PROTO_PROPERTIES = 5;
 
-	/**
-	 * @deprecated In previous releases, this name was given to
-	 * FEATURE_PARENT_PROTO_PROPERTIES.
-	 */
+        /**
+         * @deprecated In previous releases, this name was given to
+         * FEATURE_PARENT_PROTO_PROPERTIES.
+         */
     public static final int FEATURE_PARENT_PROTO_PROPRTIES = 5;
-	
+
     /**
      * Control if support for E4X(ECMAScript for XML) extension is available.
      * If hasFeature(FEATURE_E4X) returns true, the XML syntax is available.
@@ -266,11 +273,11 @@ public class Context
      * When the feature is on Rhino will add a "fileName" and "lineNumber"
      * properties to Error objects automatically. When the feature is off, you
      * have to explicitly pass them as the second and third argument to the
-     * Error constructor. Note that neither behavior is fully ECMA 262 
-     * compliant (as 262 doesn't specify a three-arg constructor), but keeping 
+     * Error constructor. Note that neither behavior is fully ECMA 262
+     * compliant (as 262 doesn't specify a three-arg constructor), but keeping
      * the feature off results in Error objects that don't have
      * additional non-ECMA properties when constructed using the ECMA-defined
-     * single-arg constructor and is thus desirable if a stricter ECMA 
+     * single-arg constructor and is thus desirable if a stricter ECMA
      * compliance is desired, specifically adherence to the point 15.11.5. of
      * the standard.
      * <p>
@@ -297,7 +304,7 @@ public class Context
     public static final int FEATURE_WARNING_AS_ERROR = 12;
 
     /**
-     * Enables enhanced access to Java. 
+     * Enables enhanced access to Java.
      * Specifically, controls whether private and protected members can be
      * accessed, and whether scripts can catch all Java exceptions.
      * <p>
@@ -396,7 +403,7 @@ public class Context
      * is not associated with any other thread.
      * @param cx a Context to associate with the thread if possible
      * @return a Context associated with the current thread
-     * @deprecated use {@link ContextFactory#enterContext(Context)} instead as 
+     * @deprecated use {@link ContextFactory#enterContext(Context)} instead as
      * this method relies on usage of a static singleton "global" ContextFactory.
      * @see ContextFactory#enterContext(Context)
      * @see ContextFactory#call(ContextAction)
@@ -405,7 +412,7 @@ public class Context
     {
         return enter(cx, ContextFactory.getGlobal());
     }
-    
+
     static final Context enter(Context cx, ContextFactory factory)
     {
         Object helper = VMBridge.instance.getThreadContextHelper();
@@ -438,9 +445,9 @@ public class Context
      *
      * Calling <code>exit()</code> will remove the association between
      * the current thread and a Context if the prior call to
-     * {@link ContextFactory#enterContext()} on this thread newly associated a 
-     * Context with this thread. Once the current thread no longer has an 
-     * associated Context, it cannot be used to execute JavaScript until it is 
+     * {@link ContextFactory#enterContext()} on this thread newly associated a
+     * Context with this thread. Once the current thread no longer has an
+     * associated Context, it cannot be used to execute JavaScript until it is
      * again associated with a Context.
      * @see ContextFactory#enterContext()
      */
@@ -458,7 +465,7 @@ public class Context
             cx.factory.onContextReleased(cx);
         }
     }
-    
+
     /**
      * Call {@link ContextAction#run(Context cx)}
      * using the Context instance associated with the current thread.
@@ -467,8 +474,8 @@ public class Context
      * construct new Context instance. The instance will be temporary
      * associated with the thread during call to
      * {@link ContextAction#run(Context)}.
-     * @deprecated use {@link ContextFactory#call(ContextAction)} instead as 
-     * this method relies on usage of a static singleton "global" 
+     * @deprecated use {@link ContextFactory#call(ContextAction)} instead as
+     * this method relies on usage of a static singleton "global"
      * ContextFactory.
      * @return The result of {@link ContextAction#run(Context)}.
      */
@@ -487,8 +494,8 @@ public class Context
      * new Context instance. The instance will be temporary associated
      * with the thread during call to {@link ContextAction#run(Context)}.
      * <p>
-     * It is allowed but not advisable to use null for <tt>factory</tt> 
-     * argument in which case the global static singleton ContextFactory 
+     * It is allowed but not advisable to use null for <tt>factory</tt>
+     * argument in which case the global static singleton ContextFactory
      * instance will be used to create new context instances.
      * @see ContextFactory#call(ContextAction)
      */
@@ -505,7 +512,7 @@ public class Context
             }
         });
     }
-    
+
     /**
      * The method implements {@link ContextFactory#call(ContextAction)} logic.
      */
@@ -649,8 +656,8 @@ public class Context
         Object listeners = propertyListeners;
         if (listeners != null && version != this.version) {
             firePropertyChangeImpl(listeners, languageVersionProperty,
-                               new Integer(this.version),
-                               new Integer(version));
+                               Integer.valueOf(this.version),
+                               Integer.valueOf(version));
         }
         this.version = version;
     }
@@ -667,6 +674,7 @@ public class Context
             case VERSION_1_5:
             case VERSION_1_6:
             case VERSION_1_7:
+            case VERSION_1_8:
                 return true;
         }
         return false;
@@ -1329,7 +1337,8 @@ public class Context
      *
      * @param source the source string
      * @param sourceName a string describing the source, such as a filename
-     * @param lineno the starting line number for reporting errors
+     * @param lineno the starting line number for reporting errors. Use 
+     *        0 if the line number is unknown.
      * @param securityDomain an arbitrary object that specifies security
      *        information about the origin or owner of the script. For
      *        implementations that don't care about security, this value
@@ -1349,7 +1358,7 @@ public class Context
                              securityDomain);
     }
 
-    protected Script compileString(String source,
+    final Script compileString(String source,
                                Evaluator compiler,
                                ErrorReporter compilationErrorReporter,
                                String sourceName, int lineno,
@@ -1835,7 +1844,7 @@ public class Context
     {
         return optimizationLevel;
     }
-    
+
     /**
      * Set the current optimization level.
      * <p>
@@ -1881,17 +1890,17 @@ public class Context
     }
 
     /**
-     * Returns the maximum stack depth (in terms of number of call frames) 
+     * Returns the maximum stack depth (in terms of number of call frames)
      * allowed in a single invocation of interpreter. If the set depth would be
      * exceeded, the interpreter will throw an EvaluatorException in the script.
-     * Defaults to Integer.MAX_VALUE. The setting only has effect for 
+     * Defaults to Integer.MAX_VALUE. The setting only has effect for
      * interpreted functions (those compiled with optimization level set to -1).
      * As the interpreter doesn't use the Java stack but rather manages its own
-     * stack in the heap memory, a runaway recursion in interpreted code would 
-     * eventually consume all available memory and cause OutOfMemoryError 
+     * stack in the heap memory, a runaway recursion in interpreted code would
+     * eventually consume all available memory and cause OutOfMemoryError
      * instead of a StackOverflowError limited to only a single thread. This
      * setting helps prevent such situations.
-     *  
+     *
      * @return The current maximum interpreter stack depth.
      */
     public final int getMaximumInterpreterStackDepth()
@@ -1900,21 +1909,21 @@ public class Context
     }
 
     /**
-     * Sets the maximum stack depth (in terms of number of call frames) 
+     * Sets the maximum stack depth (in terms of number of call frames)
      * allowed in a single invocation of interpreter. If the set depth would be
      * exceeded, the interpreter will throw an EvaluatorException in the script.
-     * Defaults to Integer.MAX_VALUE. The setting only has effect for 
+     * Defaults to Integer.MAX_VALUE. The setting only has effect for
      * interpreted functions (those compiled with optimization level set to -1).
      * As the interpreter doesn't use the Java stack but rather manages its own
-     * stack in the heap memory, a runaway recursion in interpreted code would 
-     * eventually consume all available memory and cause OutOfMemoryError 
+     * stack in the heap memory, a runaway recursion in interpreted code would
+     * eventually consume all available memory and cause OutOfMemoryError
      * instead of a StackOverflowError limited to only a single thread. This
      * setting helps prevent such situations.
-     * 
+     *
      * @param max the new maximum interpreter stack depth
      * @throws IllegalStateException if this context's optimization level is not
      * -1
-     * @throws IllegalArgumentException if the new depth is not at least 1 
+     * @throws IllegalArgumentException if the new depth is not at least 1
      */
     public final void setMaximumInterpreterStackDepth(int max)
     {
@@ -1927,7 +1936,7 @@ public class Context
         }
         maximumInterpreterStackDepth = max;
     }
-    
+
     /**
      * Set the security controller for this context.
      * <p> SecurityController may only be set if it is currently null
@@ -1960,20 +1969,40 @@ public class Context
      * @throws SecurityException if there is already a ClassShutter
      *         object for this Context
      */
-    public final void setClassShutter(ClassShutter shutter)
+    public synchronized final void setClassShutter(ClassShutter shutter)
     {
         if (sealed) onSealedMutation();
         if (shutter == null) throw new IllegalArgumentException();
-        if (classShutter != null) {
+        if (hasClassShutter) {
             throw new SecurityException("Cannot overwrite existing " +
                                         "ClassShutter object");
         }
         classShutter = shutter;
+        hasClassShutter = true;
     }
-
-    final ClassShutter getClassShutter()
+    
+    final synchronized ClassShutter getClassShutter()
     {
         return classShutter;
+    }
+    
+    public interface ClassShutterSetter {
+        public void setClassShutter(ClassShutter shutter);
+        public ClassShutter getClassShutter();
+    }
+    
+    public final synchronized ClassShutterSetter getClassShutterSetter() {
+        if (hasClassShutter)
+            return null;
+        hasClassShutter = true;
+        return new ClassShutterSetter() {
+            public void setClassShutter(ClassShutter shutter) {
+                classShutter = shutter;
+            }
+            public ClassShutter getClassShutter() {
+                return classShutter;
+            }
+        };
     }
 
     /**
@@ -2159,21 +2188,21 @@ public class Context
         ContextFactory f = getFactory();
         return f.hasFeature(this, featureIndex);
     }
-	
-	/**
-		Returns an object which specifies an E4X implementation to use within
-		this <code>Context</code>.  Note
-		that the XMLLib.Factory interface should be considered experimental.
-	 
-		The default implementation uses the implementation provided by this
-		<code>Context</code>'s {@link ContextFactory}.
-	 
-		@return An XMLLib.Factory.  Should not return <code>null</code> if
-			{@link #FEATURE_E4X} is enabled.  See {@link #hasFeature}.
-	 */
-	public XMLLib.Factory getE4xImplementationFactory() {
-		return getFactory().getE4xImplementationFactory();
-	}
+
+        /**
+                Returns an object which specifies an E4X implementation to use within
+                this <code>Context</code>.  Note
+                that the XMLLib.Factory interface should be considered experimental.
+
+                The default implementation uses the implementation provided by this
+                <code>Context</code>'s {@link ContextFactory}.
+
+                @return An XMLLib.Factory.  Should not return <code>null</code> if
+                        {@link #FEATURE_E4X} is enabled.  See {@link #hasFeature}.
+         */
+        public XMLLib.Factory getE4xImplementationFactory() {
+                return getFactory().getE4xImplementationFactory();
+        }
 
     /**
      * Get threshold of executed instructions counter that triggers call to
@@ -2223,7 +2252,7 @@ public class Context
      * calls to accumulate an estimate of the instructions executed.
      */
     public void setGenerateObserverCount(boolean generateObserverCount) {
-    	this.generateObserverCount = generateObserverCount;
+        this.generateObserverCount = generateObserverCount;
     }
 
     /**
@@ -2363,18 +2392,18 @@ public class Context
         if (returnFunction) {
             p.calledByCompileFunction = true;
         }
-        ScriptOrFnNode tree;
+        AstRoot ast;
         if (sourceString != null) {
-            tree = p.parse(sourceString, sourceName, lineno);
+            ast = p.parse(sourceString, sourceName, lineno);
         } else {
-            tree = p.parse(sourceReader, sourceName, lineno);
+            ast = p.parse(sourceReader, sourceName, lineno);
         }
         if (returnFunction) {
-            if (!(tree.getFunctionCount() == 1
-                  && tree.getFirstChild() != null
-                  && tree.getFirstChild().getType() == Token.FUNCTION))
+            // parser no longer adds function to script node
+            if (!(ast.getFirstChild() != null
+                  && ast.getFirstChild().getType() == Token.FUNCTION))
             {
-                // XXX: the check just look for the first child
+                // XXX: the check just looks for the first child
                 // and allows for more nodes after it for compatibility
                 // with sources like function() {};;;
                 throw new IllegalArgumentException(
@@ -2382,16 +2411,21 @@ public class Context
             }
         }
 
+        IRFactory irf = new IRFactory(compilerEnv, compilationErrorReporter);
+        ScriptNode tree = irf.transformTree(ast);
+
+        // discard everything but the IR tree
+        p = null;
+        ast = null;
+        irf = null;
+
         if (compiler == null) {
             compiler = createCompiler();
         }
 
-        String encodedSource = p.getEncodedSource();
-
         Object bytecode = compiler.compile(compilerEnv,
-                                           tree, encodedSource,
+                                           tree, tree.getEncodedSource(),
                                            returnFunction);
-
         if (debugger != null) {
             if (sourceString == null) Kit.codeBug();
             if (bytecode instanceof DebuggableScript) {
@@ -2589,6 +2623,7 @@ public class Context
     int version;
 
     private SecurityController securityController;
+    private boolean hasClassShutter;
     private ClassShutter classShutter;
     private ErrorReporter errorReporter;
     RegExpProxy regExpProxy;
@@ -2635,5 +2670,5 @@ public class Context
     Scriptable scratchScriptable;
 
     // Generate an observer count on compiled code
-	public boolean generateObserverCount = false;
+    public boolean generateObserverCount = false;
 }
