@@ -41,6 +41,8 @@
 package org.mozilla.javascript;
 
 import java.util.Arrays;
+import java.util.LinkedHashSet;
+import java.util.Set;
 
 /**
  * This class implements the Array native object.
@@ -64,7 +66,7 @@ public class NativeArray extends IdScriptableObject
      */
 
     private static final Object ARRAY_TAG = "Array";
-    private static final Integer NEGATIVE_ONE = new Integer(-1);
+    private static final Integer NEGATIVE_ONE = Integer.valueOf(-1);
 
     static void init(Scriptable scope, boolean sealed)
     {
@@ -187,6 +189,10 @@ public class NativeArray extends IdScriptableObject
                 "map", 2);
         addIdFunctionProperty(ctor, ARRAY_TAG, ConstructorId_some,
                 "some", 2);
+        addIdFunctionProperty(ctor, ARRAY_TAG, ConstructorId_reduce,
+                "reduce", 2);
+        addIdFunctionProperty(ctor, ARRAY_TAG, ConstructorId_reduceRight,
+                "reduceRight", 2);
         super.fillConstructorProperties(ctor);
     }
 
@@ -217,6 +223,8 @@ public class NativeArray extends IdScriptableObject
           case Id_forEach:        arity=1; s="forEach";        break;
           case Id_map:            arity=1; s="map";            break;
           case Id_some:           arity=1; s="some";           break;
+          case Id_reduce:         arity=1; s="reduce";         break;
+          case Id_reduceRight:    arity=1; s="reduceRight";    break;
           default: throw new IllegalArgumentException(String.valueOf(id));
         }
         initPrototypeMethod(ARRAY_TAG, id, s, arity);
@@ -249,12 +257,16 @@ public class NativeArray extends IdScriptableObject
               case ConstructorId_filter:
               case ConstructorId_forEach:
               case ConstructorId_map:
-              case ConstructorId_some: {
-                thisObj = ScriptRuntime.toObject(scope, args[0]);
-                Object[] newArgs = new Object[args.length-1];
-                for (int i=0; i < newArgs.length; i++)
-                    newArgs[i] = args[i+1];
-                args = newArgs;
+              case ConstructorId_some:
+              case ConstructorId_reduce:
+              case ConstructorId_reduceRight: {
+                if (args.length > 0) {
+                    thisObj = ScriptRuntime.toObject(scope, args[0]);
+                    Object[] newArgs = new Object[args.length-1];
+                    for (int i=0; i < newArgs.length; i++)
+                        newArgs[i] = args[i+1];
+                    args = newArgs;
+                }
                 id = -id;
                 continue again;
               }
@@ -320,6 +332,9 @@ public class NativeArray extends IdScriptableObject
               case Id_map:
               case Id_some:
                 return iterativeMethod(cx, id, scope, thisObj, args);
+              case Id_reduce:
+              case Id_reduceRight:
+                return reduceMethod(cx, id, scope, thisObj, args);
             }
             throw new IllegalArgumentException(String.valueOf(id));
         }
@@ -455,7 +470,7 @@ public class NativeArray extends IdScriptableObject
         for (int i = 0; i != N; ++i) {
             // Replace existing elements by their indexes
             if (dense[i] != NOT_FOUND) {
-                ids[presentCount] = new Integer(i);
+                ids[presentCount] = Integer.valueOf(i);
                 ++presentCount;
             }
         }
@@ -470,12 +485,21 @@ public class NativeArray extends IdScriptableObject
     }
 
     @Override
+    public Object[] getAllIds()
+    {
+      Set<Object> allIds = new LinkedHashSet<Object>(
+            Arrays.asList(this.getIds()));
+      allIds.addAll(Arrays.asList(super.getAllIds()));
+      return allIds.toArray();
+    }
+
+    @Override
     public Object getDefaultValue(Class<?> hint)
     {
         if (hint == ScriptRuntime.NumberClass) {
             Context cx = Context.getContext();
             if (cx.getLanguageVersion() == Context.VERSION_1_2)
-                return new Long(length);
+                return Long.valueOf(length);
         }
         return super.getDefaultValue(hint);
     }
@@ -631,6 +655,15 @@ public class NativeArray extends IdScriptableObject
             return ScriptRuntime.getObjectProp(target, id, cx);
         } else {
             return ScriptRuntime.getObjectIndex(target, (int)index, cx);
+        }
+    }
+
+    // same as getElem, but without converting NOT_FOUND to undefined
+    private static Object getRawElem(Scriptable target, long index) {
+        if (index > Integer.MAX_VALUE) {
+            return ScriptableObject.getProperty(target, Long.toString(index));
+        } else {
+            return ScriptableObject.getProperty(target, (int) index);
         }
     }
 
@@ -1336,9 +1369,9 @@ public class NativeArray extends IdScriptableObject
                     if (args[i] instanceof NativeArray) {
                         // only try to use dense approach for Array-like
                         // objects that are actually NativeArrays
-                    	 final NativeArray arg = (NativeArray) args[i];
-                    	 canUseDense = arg.denseOnly;
-                    	 length += arg.length;
+                        final NativeArray arg = (NativeArray) args[i];
+                        canUseDense = arg.denseOnly;
+                        length += arg.length;
                     } else {
                         length++;
                     }
@@ -1514,7 +1547,7 @@ public class NativeArray extends IdScriptableObject
                       if (na.dense[i] != Scriptable.NOT_FOUND &&
                           ScriptRuntime.shallowEq(na.dense[i], compareTo))
                       {
-                          return new Long(i);
+                          return Long.valueOf(i);
                       }
                   }
                 } else {
@@ -1522,7 +1555,7 @@ public class NativeArray extends IdScriptableObject
                       if (na.dense[i] != Scriptable.NOT_FOUND &&
                           ScriptRuntime.shallowEq(na.dense[i], compareTo))
                       {
-                          return new Long(i);
+                          return Long.valueOf(i);
                       }
                   }
                 }
@@ -1553,8 +1586,7 @@ public class NativeArray extends IdScriptableObject
     {
         Object callbackArg = args.length > 0 ? args[0] : Undefined.instance;
         if (callbackArg == null || !(callbackArg instanceof Function)) {
-            throw ScriptRuntime.notFunctionError(
-                     ScriptRuntime.toString(callbackArg));
+            throw ScriptRuntime.notFunctionError(callbackArg);
         }
         Function f = (Function) callbackArg;
         Scriptable parent = ScriptableObject.getTopLevelScope(f);
@@ -1570,14 +1602,12 @@ public class NativeArray extends IdScriptableObject
         long j=0;
         for (long i=0; i < length; i++) {
             Object[] innerArgs = new Object[3];
-            Object elem = (i > Integer.MAX_VALUE)
-                ? ScriptableObject.getProperty(thisObj, Long.toString(i))
-                : ScriptableObject.getProperty(thisObj, (int)i);
+            Object elem = getRawElem(thisObj, i);
             if (elem == Scriptable.NOT_FOUND) {
                 continue;
             }
             innerArgs[0] = elem;
-            innerArgs[1] = new Long(i);
+            innerArgs[1] = Long.valueOf(i);
             innerArgs[2] = thisObj;
             Object result = f.call(cx, parent, thisArg, innerArgs);
             switch (id) {
@@ -1614,6 +1644,46 @@ public class NativeArray extends IdScriptableObject
         }
     }
 
+    /**
+     * Implements the methods "reduce" and "reduceRight".
+     */
+    private Object reduceMethod(Context cx, int id, Scriptable scope,
+                                   Scriptable thisObj, Object[] args)
+    {
+        Object callbackArg = args.length > 0 ? args[0] : Undefined.instance;
+        if (callbackArg == null || !(callbackArg instanceof Function)) {
+            throw ScriptRuntime.notFunctionError(callbackArg);
+        }
+        Function f = (Function) callbackArg;
+        Scriptable parent = ScriptableObject.getTopLevelScope(f);
+        long length = getLengthProperty(cx, thisObj);
+        // offset hack to serve both reduce and reduceRight with the same loop
+        long offset = id == Id_reduceRight ? length - 1 : 0;
+        Object value = args.length > 1 ? args[1] : Scriptable.NOT_FOUND;
+        for (long i = 0; i < length; i++) {
+            Object elem = getRawElem(thisObj, Math.abs(i - offset));
+            if (elem == Scriptable.NOT_FOUND) {
+                continue;
+            }
+            if (value == Scriptable.NOT_FOUND) {
+                // no initial value passed, use first element found as inital value
+                value = elem;
+            } else {
+                Object[] innerArgs = new Object[4];
+                innerArgs[0] = value;
+                innerArgs[1] = elem;
+                innerArgs[2] = new Long(i);
+                innerArgs[3] = thisObj;
+                value = f.call(cx, parent, parent, innerArgs);
+            }
+        }
+        if (value == Scriptable.NOT_FOUND) {
+            // reproduce spidermonkey error message
+            throw Context.reportRuntimeError0("msg.empty.array.reduce");
+        }
+        return value;
+    }
+
 // #string_id_map#
 
     @Override
@@ -1642,6 +1712,7 @@ public class NativeArray extends IdScriptableObject
                 if (c=='c') { X="concat";id=Id_concat; }
                 else if (c=='f') { X="filter";id=Id_filter; }
                 else if (c=='s') { X="splice";id=Id_splice; }
+                else if (c=='r') { X="reduce";id=Id_reduce; }
                 break L;
             case 7: switch (s.charAt(0)) {
                 case 'f': X="forEach";id=Id_forEach; break L;
@@ -1656,6 +1727,7 @@ public class NativeArray extends IdScriptableObject
             case 11: c=s.charAt(0);
                 if (c=='c') { X="constructor";id=Id_constructor; }
                 else if (c=='l') { X="lastIndexOf";id=Id_lastIndexOf; }
+                else if (c=='r') { X="reduceRight";id=Id_reduceRight; }
                 break L;
             case 14: X="toLocaleString";id=Id_toLocaleString; break L;
             }
@@ -1687,8 +1759,10 @@ public class NativeArray extends IdScriptableObject
         Id_forEach              = 19,
         Id_map                  = 20,
         Id_some                 = 21,
+        Id_reduce               = 22,
+        Id_reduceRight          = 23,
 
-        MAX_PROTOTYPE_ID        = 21;
+        MAX_PROTOTYPE_ID        = 23;
 
 // #/string_id_map#
     
@@ -1709,7 +1783,9 @@ public class NativeArray extends IdScriptableObject
         ConstructorId_filter               = -Id_filter,
         ConstructorId_forEach              = -Id_forEach,
         ConstructorId_map                  = -Id_map,
-        ConstructorId_some                 = -Id_some;
+        ConstructorId_some                 = -Id_some,
+        ConstructorId_reduce               = -Id_reduce,
+        ConstructorId_reduceRight          = -Id_reduceRight;
 
     /**
      * Internal representation of the JavaScript array's length property.
